<?xml version="1.0"?>
<package format="2">
  <name>joint_controller</name>
  <version>0.0.1</version>
  <description>For controlling an AX-12A Dynamixel Controller</description>

  <maintainer email="jrokisky831@gmail.com">justin rokisky</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamixel_workbench_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>


  <export>

  </export>
</package>
